--- a/public/assets/css/user.css
+++ b/public/assets/css/user.css
@@ -17,6 +17,29 @@
   border-radius: 8px;
 }
 
+.img-container {
+  width: 100vw;
+  height: 500px;
+}
+
+.img-md {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  transform: translate(50, 50);
+}
+
+.form-check-input {
+  width: 1.5em;
+  height: 1.5em;
+  margin-top: 0;
+  margin-right: 10px;
+}
+
+.form-check .form-check-input {
+  margin-left: 1em;
+}
+
 .drop-shadow {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
 }
